--- a/WWI22_KI_UC.ipynb
+++ b/WWI22_KI_UC.ipynb
@@ -9,13 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (2.2.2)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: pandas in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (2.2.2)\n",
       "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (from pandas) (2.0.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (from pandas) (2.9.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: numpy in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (2.0.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\alexa\\anaconda3\\envs\\alex\\lib\\site-packages (1.5.1)\n",
@@ -43,33 +43,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   PassengerId  Survived  Pclass  \\\n",
-      "0            1         0       3   \n",
-      "1            2         1       1   \n",
-      "2            3         1       3   \n",
-      "3            4         1       1   \n",
-      "4            5         0       3   \n",
+      "     PassengerId  Survived  Pclass  \\\n",
+      "0              1         0       3   \n",
+      "1              2         1       1   \n",
+      "2              3         1       3   \n",
+      "3              4         1       1   \n",
+      "4              5         0       3   \n",
+      "..           ...       ...     ...   \n",
+      "886          887         0       2   \n",
+      "887          888         1       1   \n",
+      "888          889         0       3   \n",
+      "889          890         1       1   \n",
+      "890          891         0       3   \n",
       "\n",
-      "                                                Name     Sex   Age  SibSp  \\\n",
-      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "                                                  Name     Sex   Age  SibSp  \\\n",
+      "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+      "..                                                 ...     ...   ...    ...   \n",
+      "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+      "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+      "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
+      "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+      "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
       "\n",
-      "   Parch            Ticket     Fare Cabin Embarked  \n",
-      "0      0         A/5 21171   7.2500   NaN        S  \n",
-      "1      0          PC 17599  71.2833   C85        C  \n",
-      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-      "3      0            113803  53.1000  C123        S  \n",
-      "4      0            373450   8.0500   NaN        S  \n"
+      "     Parch            Ticket     Fare Cabin Embarked  \n",
+      "0        0         A/5 21171   7.2500   NaN        S  \n",
+      "1        0          PC 17599  71.2833   C85        C  \n",
+      "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
+      "3        0            113803  53.1000  C123        S  \n",
+      "4        0            373450   8.0500   NaN        S  \n",
+      "..     ...               ...      ...   ...      ...  \n",
+      "886      0            211536  13.0000   NaN        S  \n",
+      "887      0            112053  30.0000   B42        S  \n",
+      "888      2        W./C. 6607  23.4500   NaN        S  \n",
+      "889      0            111369  30.0000  C148        C  \n",
+      "890      0            370376   7.7500   NaN        Q  \n",
+      "\n",
+      "[891 rows x 12 columns]\n"
      ]
     }
    ],
@@ -149,7 +169,7 @@
     }
    ],
    "source": [
-    "print(df_titanic_train.info())\n"
+    "print(df_titanic_train.info())"
    ]
   },
   {
@@ -174,6 +194,13 @@
    "source": [
     "#X_train = df_titanic_train.drop(['Survived', 'Embarked', 'Cabin', 'Name', 'Ticket','Fare','SibSp', 'Parch'], axis=1)\n",
     "X_train = df_titanic_train.drop(['Survived', 'Embarked', 'Cabin', 'Name', 'Ticket'], axis=1)\n",
+    "#Verschiedene Scenarien mit wenig Attributen und mit Vielen, //Besprechung\n",
+    "#Bsp: Geschlecht und Klasse\n",
+    "#Name --> Mappen des Titel Pclass oder Name\n",
+    "#Name Mappen anhand String Characters,\n",
+    "#Argumentieren für oder Gegen Attribute\n",
+    "#improve\n",
+    "#ConfusionsMatrix für jedes Modell vllt mit Kreuz, und Hyperparametertuning\n",
     "y_train = df_titanic_train['Survived']\n",
     "\n",
     "X_train['Sex'] = X_train['Sex'].map({'male': 0, 'female': 1})\n",
@@ -185,9 +212,9 @@
    "metadata": {},
    "source": [
     "Fragen an Hörchenberger:\n",
-    "Umfang Dokumentation,\n",
+    "Umfang Dokumentation, --> Keine Regelung, Vollständig alles erfassen was gemacht wurde --> Ideen Gedankengänge,\n",
     "Inhalt Dokumentation,\n",
-    "Fehlende Daten bei Age Cabine ausfüllen oder nicht\n"
+    "Fehlende Daten bei Age Cabine ausfüllen oder nicht --> nicht ausfüllen\n"
    ]
   },
   {
@@ -269,7 +296,8 @@
    "source": [
     "Weitere Methoden:\n",
     "    -Random Decision Forest (Rauschtolleranz, Gewichtung von Spalten / fehlende Werte)\n",
-    "    -Support Vector Machine (gut bei hochdimensionalen Datensätzen)"
+    "    -Support Vector Machine (gut bei hochdimensionalen Datensätzen)\n",
+    "    -Neuronales Netzwerk zum zeigen nicht mit Kanonen auf Spatzen schießen"
    ]
   }
  ],
