--- a/Titanic_R_D_F.ipynb
+++ b/Titanic_R_D_F.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,45 +14,79 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "# Importieren der notwendigen Bibliotheken\n",
+    "import pandas as pd  # Pandas wird verwendet, um die Daten zu laden und zu manipulieren\n",
+    "import time  # Das time-Modul wird verwendet, um die Ausführungszeit zu messen\n",
+    "from sklearn.model_selection import train_test_split  # Methode zum Aufteilen der Daten in Trainings- und Validierungssets\n",
+    "from sklearn.ensemble import RandomForestClassifier  # Importiert den RandomForestClassifier aus sklearn\n",
+    "from sklearn.preprocessing import StandardScaler  # Importiert den StandardScaler zur Normalisierung der Daten\n",
+    "from sklearn.metrics import accuracy_score  # Importiert die Methode zur Berechnung der Genauigkeit\n",
     "\n",
     "# Laden der Titanic-Daten\n",
-    "df_titanic_train = pd.read_csv('titanic_training.csv')\n",
+    "df_titanic_train = pd.read_csv('titanic_training.csv')  # Laden der Titanic-Daten aus einer CSV-Datei in ein Pandas DataFrame\n",
     "\n",
     "# Datenvorverarbeitung\n",
-    "X = df_titanic_train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1)\n",
-    "y = df_titanic_train['Survived']\n",
+    "X = df_titanic_train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1)  \n",
+    "# Entfernen von unnötigen Spalten aus den Eingabedaten (Cabin, Ticket, Name) und der Zielvariable 'Survived'\n",
+    "\n",
+    "y = df_titanic_train['Survived']  # Extrahieren der Zielvariable \"Survived\"\n",
     "\n",
     "# Umwandlung kategorischer Variablen\n",
-    "X['Sex'] = X['Sex'].map({'male': 0, 'female': 1})\n",
-    "X['Embarked'] = X['Embarked'].map({'Q': 0, 'S': 1, 'C': 2})\n",
+    "X['Sex'] = X['Sex'].map({'male': 0, 'female': 1})  # Umwandlung der Geschlechtsvariable in numerische Werte (0 für männlich, 1 für weiblich)\n",
+    "X['Embarked'] = X['Embarked'].map({'Q': 0, 'S': 1, 'C': 2})  # Umwandlung der Embarkationsvariable in numerische Werte (0 für Q, 1 für S, 2 für C)\n",
     "\n",
     "# Entfernen von fehlenden Werten\n",
-    "X.dropna(inplace=True)\n",
-    "y = y[X.index]\n",
+    "X.dropna(inplace=True)  # Entfernen aller Zeilen mit fehlenden Werten in den Eingabedaten\n",
+    "y = y[X.index]  # Anpassung der Zielvariable entsprechend den verbleibenden Indizes der Eingabedaten\n",
     "\n",
     "# Aufteilen der Daten in Trainings- und Validierungsdatensätze\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)  \n",
+    "# Aufteilen der Daten in Trainings- (80%) und Validierungsdatensätze (20%), wobei random_state die Zufälligkeit kontrolliert und Reproduzierbarkeit sicherstellt\n",
     "\n",
     "# Skalieren der Daten\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_val = scaler.transform(X_val)\n",
+    "scaler = StandardScaler()  # Initialisieren des StandardScalers zur Normalisierung der Daten\n",
+    "X_train = scaler.fit_transform(X_train)  # Anpassen des Scalers an die Trainingsdaten und Transformation der Trainingsdaten\n",
+    "X_val = scaler.transform(X_val)  # Transformation der Validierungsdaten mit dem bereits angepassten Scaler\n",
     "\n",
-    "# Erstellen und Trainieren des Random Forest Classifiers\n",
-    "model = RandomForestClassifier(n_estimators=1000, random_state=42)\n",
-    "model.fit(X_train, y_train)\n",
+    "# Iterative Suche nach der besten Anzahl an Bäumen\n",
+    "best_accuracy = 0  # Initialisierung der besten Genauigkeit mit 0\n",
+    "best_n_estimators = 0  # Initialisierung der besten Anzahl an Bäumen mit 0\n",
+    "\n",
+    "# Testen der Anzahl der Bäume von 10 bis 2100 in 100er-Schritten\n",
+    "for n in range(10, 2110, 100):  # Schleife über verschiedene Werte von n_estimators (Anzahl der Bäume im Random Forest)\n",
+    "    print(f\"Teste {n} Bäume...\")  # Ausgabe der aktuellen Anzahl an Bäumen\n",
+    "    \n",
+    "    start_time = time.time()  # Startzeit für die Zeitmessung\n",
+    "    \n",
+    "    model = RandomForestClassifier(n_estimators=n, random_state=42)  # Erstellen eines Random Forest Modells mit n Bäumen\n",
+    "    model.fit(X_train, y_train)  # Trainieren des Modells mit den Trainingsdaten\n",
+    "    y_pred = model.predict(X_val)  # Vorhersagen auf den Validierungsdaten\n",
+    "    accuracy = accuracy_score(y_val, y_pred)  # Berechnung der Genauigkeit der Vorhersagen\n",
+    "    \n",
+    "    end_time = time.time()  # Endzeit für die Zeitmessung\n",
+    "    \n",
+    "    elapsed_time = end_time - start_time  # Berechnung der Zeit, die für diesen Durchlauf benötigt wurde\n",
+    "    print(f\"Anzahl Bäume: {n}, Genauigkeit: {accuracy*100:.2f}%, Dauer: {elapsed_time:.2f} Sekunden\")  # Ausgabe der Ergebnisse für diesen Durchlauf\n",
+    "    \n",
+    "    # Überprüfen, ob die aktuelle Anzahl an Bäumen die beste Genauigkeit liefert\n",
+    "    if accuracy > best_accuracy:  \n",
+    "        best_accuracy = accuracy  # Aktualisierung der besten Genauigkeit\n",
+    "        best_n_estimators = n  # Speichern der Anzahl an Bäumen, die die beste Genauigkeit geliefert hat\n",
+    "\n",
+    "# Ausgabe der besten Anzahl an Bäumen und der zugehörigen Genauigkeit\n",
+    "print(f\"Beste Anzahl an Bäumen: {best_n_estimators}\")\n",
+    "print(f\"Beste Validierungsgenauigkeit: {best_accuracy*100:.2f}%\")\n",
+    "\n",
+    "# Erstellen und Trainieren des finalen Modells mit der besten Anzahl an Bäumen\n",
+    "final_model = RandomForestClassifier(n_estimators=best_n_estimators, random_state=42)  # Erstellen des finalen Modells mit der optimalen Anzahl an Bäumen\n",
+    "final_model.fit(X_train, y_train)  # Trainieren des finalen Modells\n",
     "\n",
     "# Vorhersagen auf dem Validierungsdatensatz\n",
-    "y_pred = model.predict(X_val)\n",
+    "final_y_pred = final_model.predict(X_val)  # Vorhersagen mit dem finalen Modell auf den Validierungsdaten\n",
     "\n",
-    "# Berechnung der Genauigkeit\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
-    "print(f\"Validierungsgenauigkeit: {accuracy*100:.2f}%\")\n"
+    "# Berechnung der endgültigen Genauigkeit\n",
+    "final_accuracy = accuracy_score(y_val, final_y_pred)  # Berechnung der Genauigkeit des finalen Modells\n",
+    "print(f\"Endgültige Validierungsgenauigkeit mit {best_n_estimators} Bäumen: {final_accuracy*100:.2f}%\")  # Ausgabe der endgültigen Genauigkeit\n"
    ]
   }
  ],
