Little_Bird_change

--- a/Titanic_K_N_N.ipynb
+++ b/Titanic_K_N_N.ipynb
@@ -404,6 +404,48 @@
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 1. CSV-Datei einlesen\n",
+    "csv_data = pd.read_csv('titanic_test.csv')  # Ersetze 'input_data.csv' durch den tatsächlichen Dateinamen\n",
+    "\n",
+    "# Features vorbereiten\n",
+    "X_new = csv_data[['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex', 'Embarked']]\n",
+    "\n",
+    "# Sicherstellen, dass die gleichen Vorverarbeitungen wie beim Training angewendet werden\n",
+    "# Beispielsweise: Encoding von 'Sex' und 'Embarked'\n",
+    "X_new['Sex'] = X_new['Sex'].map({'male': 0, 'female': 1})\n",
+    "X_new['Embarked'] = X_new['Embarked'].map({'S': 0, 'C': 1, 'Q': 2})\n",
+    "\n",
+    "# Fehlende Werte im Datensatz handhaben, z.B. durch Auffüllen mit Median\n",
+    "X_new['Age'].fillna(X_new['Age'].median(), inplace=True)\n",
+    "X_new['Fare'].fillna(X_new['Fare'].median(), inplace=True)\n",
+    "\n",
+    "# 2. Modell anwenden\n",
+    "predictions = model.predict(X_new)\n",
+    "\n",
+    "# Ergebnisse speichern\n",
+    "csv_data['Prediction'] = predictions\n",
+    "csv_data.to_csv('Ergebnisse.csv', index=False)\n",
+    "\n",
+    "# 3. Ergebnisse mit der Excel-Datei überprüfen\n",
+    "excel_data = pd.read_csv('titanic_test_survival.csv')  # Excel-Datei einlesen\n",
+    "\n",
+    "# Annahme: Die tatsächlichen Werte sind in einer Spalte namens 'Survived' gespeichert\n",
+    "csv_data['Correct'] = csv_data['Prediction'] == excel_data['Survived']\n",
+    "\n",
+    "# 'Ja' oder 'Nein' einfügen\n",
+    "csv_data['Correct'] = csv_data['Correct'].apply(lambda x: 'Ja' if x else 'Nein')\n",
+    "\n",
+    "# Aktualisierte Datei speichern\n",
+    "csv_data.to_csv('Ergebnisse_mit_Verifizierung.csv', index=False)\n"
+   ]
   }
  ],
  "metadata": {
