--- a/Titanic_R_D_F.ipynb
+++ b/Titanic_R_D_F.ipynb
@@ -9,7 +9,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validierungsgenauigkeit: 81.12%\n"
+      "Teste 10 Bäume...\n",
+      "Anzahl Bäume: 10, Genauigkeit: 79.02%, Dauer: 0.02 Sekunden\n",
+      "Teste 110 Bäume...\n",
+      "Anzahl Bäume: 110, Genauigkeit: 79.02%, Dauer: 0.14 Sekunden\n",
+      "Teste 210 Bäume...\n",
+      "Anzahl Bäume: 210, Genauigkeit: 79.72%, Dauer: 0.26 Sekunden\n",
+      "Teste 310 Bäume...\n",
+      "Anzahl Bäume: 310, Genauigkeit: 80.42%, Dauer: 0.40 Sekunden\n",
+      "Teste 410 Bäume...\n",
+      "Anzahl Bäume: 410, Genauigkeit: 80.42%, Dauer: 0.52 Sekunden\n",
+      "Teste 510 Bäume...\n",
+      "Anzahl Bäume: 510, Genauigkeit: 80.42%, Dauer: 0.66 Sekunden\n",
+      "Teste 610 Bäume...\n",
+      "Anzahl Bäume: 610, Genauigkeit: 81.12%, Dauer: 0.76 Sekunden\n",
+      "Teste 710 Bäume...\n",
+      "Anzahl Bäume: 710, Genauigkeit: 81.12%, Dauer: 0.91 Sekunden\n",
+      "Teste 810 Bäume...\n",
+      "Anzahl Bäume: 810, Genauigkeit: 81.12%, Dauer: 1.00 Sekunden\n",
+      "Teste 910 Bäume...\n",
+      "Anzahl Bäume: 910, Genauigkeit: 81.12%, Dauer: 1.13 Sekunden\n",
+      "Teste 1010 Bäume...\n",
+      "Anzahl Bäume: 1010, Genauigkeit: 81.12%, Dauer: 1.24 Sekunden\n",
+      "Teste 1110 Bäume...\n",
+      "Anzahl Bäume: 1110, Genauigkeit: 81.12%, Dauer: 1.40 Sekunden\n",
+      "Teste 1210 Bäume...\n",
+      "Anzahl Bäume: 1210, Genauigkeit: 81.12%, Dauer: 1.50 Sekunden\n",
+      "Teste 1310 Bäume...\n",
+      "Anzahl Bäume: 1310, Genauigkeit: 81.12%, Dauer: 1.63 Sekunden\n",
+      "Teste 1410 Bäume...\n",
+      "Anzahl Bäume: 1410, Genauigkeit: 81.12%, Dauer: 1.77 Sekunden\n",
+      "Teste 1510 Bäume...\n",
+      "Anzahl Bäume: 1510, Genauigkeit: 81.12%, Dauer: 2.05 Sekunden\n",
+      "Teste 1610 Bäume...\n",
+      "Anzahl Bäume: 1610, Genauigkeit: 81.12%, Dauer: 2.02 Sekunden\n",
+      "Teste 1710 Bäume...\n",
+      "Anzahl Bäume: 1710, Genauigkeit: 81.12%, Dauer: 2.27 Sekunden\n",
+      "Teste 1810 Bäume...\n",
+      "Anzahl Bäume: 1810, Genauigkeit: 81.12%, Dauer: 2.36 Sekunden\n",
+      "Teste 1910 Bäume...\n",
+      "Anzahl Bäume: 1910, Genauigkeit: 81.12%, Dauer: 2.45 Sekunden\n",
+      "Teste 2010 Bäume...\n",
+      "Anzahl Bäume: 2010, Genauigkeit: 81.12%, Dauer: 2.83 Sekunden\n",
+      "Beste Anzahl an Bäumen: 610\n",
+      "Beste Validierungsgenauigkeit: 81.12%\n",
+      "Endgültige Validierungsgenauigkeit mit 610 Bäumen: 81.12%\n"
      ]
     }
    ],
