Updated other Algorithms

--- a/Titanic_K_N_N.ipynb
+++ b/Titanic_K_N_N.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +182,57 @@
    ],
    "source": [
     "print(df_titanic_train.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genauigkeit des KNN-Modells: 0.6364\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd  # Pandas wird verwendet, um die Daten zu laden und zu manipulieren\n",
+    "from sklearn.model_selection import train_test_split  # Methode zum Aufteilen der Daten in Trainings- und Validierungssets\n",
+    "from sklearn.neighbors import KNeighborsClassifier  # Importiert den KNeighborsClassifier aus sklearn\n",
+    "from sklearn.metrics import accuracy_score  # Importiert die Methode zur Berechnung der Genauigkeit\n",
+    "\n",
+    "# Laden der Titanic-Daten\n",
+    "df_titanic_train = pd.read_csv('titanic_training.csv')  # Laden der Titanic-Daten aus einer CSV-Datei in ein Pandas DataFrame\n",
+    "\n",
+    "# Datenvorverarbeitung\n",
+    "X = df_titanic_train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1)  \n",
+    "# Entfernen von unnötigen Spalten aus den Eingabedaten (Cabin, Ticket, Name) und der Zielvariable 'Survived'\n",
+    "\n",
+    "y = df_titanic_train['Survived']  # Extrahieren der Zielvariable \"Survived\"\n",
+    "\n",
+    "# Umwandlung kategorischer Variablen\n",
+    "X['Sex'] = X['Sex'].map({'male': 0, 'female': 1})  # Umwandlung der Geschlechtsvariable in numerische Werte (0 für männlich, 1 für weiblich)\n",
+    "X['Embarked'] = X['Embarked'].map({'Q': 0, 'S': 1, 'C': 2})  # Umwandlung der Embarkationsvariable in numerische Werte (0 für Q, 1 für S, 2 für C)\n",
+    "\n",
+    "# Entfernen von fehlenden Werten\n",
+    "X.dropna(inplace=True)  # Entfernen aller Zeilen mit fehlenden Werten in den Eingabedaten\n",
+    "y = y[X.index]  # Anpassung der Zielvariable entsprechend den verbleibenden Indizes der Eingabedaten\n",
+    "\n",
+    "# Aufteilen in Trainings- und Testdaten\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Einfaches KNN-Modell erstellen und trainieren\n",
+    "knn = KNeighborsClassifier()  # Verwenden des Standard-KNN-Modells\n",
+    "knn.fit(X_train, y_train)  # Trainieren des KNN-Modells auf den Trainingsdaten\n",
+    "\n",
+    "# Vorhersagen treffen\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# Genauigkeit berechnen\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Genauigkeit des KNN-Modells: {accuracy:.4f}\")\n"
    ]
   },
   {
