--- a/Titanic_Neuron_Net.ipynb
+++ b/Titanic_Neuron_Net.ipynb
@@ -705,6 +705,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -829,35 +842,22 @@
     }
    ],
    "source": [
-    "# Importieren der notwendigen Bibliotheken\n",
-    "import pandas as pd  # Pandas wird verwendet, um Daten zu laden und zu bearbeiten\n",
-    "from sklearn.model_selection import train_test_split  # Methode zum Aufteilen der Daten in Trainings- und Testsets\n",
-    "from tensorflow.keras.models import Sequential  # Importiert das Sequential-Modell von Keras (für den Aufbau eines neuronalen Netzwerks)\n",
-    "from tensorflow.keras.layers import Dense  # Importiert die Dense-Schicht (voll verbundene Schicht) von Keras\n",
-    "from tensorflow.keras.utils import to_categorical  # Hilfsfunktion zur Umwandlung von Zielvariablen in eine kategorische Form\n",
+    "df_titanic_train = pd.read_csv('titanic_training.csv')\n",
     "\n",
-    "# Laden der Titanic-Daten\n",
-    "df_titanic_train = pd.read_csv('titanic_training.csv')  # Daten werden aus einer CSV-Datei in ein Pandas DataFrame geladen\n",
+    "X = df_titanic_train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1) \n",
+    "y = df_titanic_train['Survived']\n",
     "\n",
-    "# Datenvorverarbeitung\n",
-    "X = df_titanic_train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1)  # Unnötige Spalten (Zielvariable und andere) werden aus den Eingabedaten entfernt\n",
-    "y = df_titanic_train['Survived']  # Zielvariable \"Survived\" wird extrahiert\n",
+    "X['Sex'] = X['Sex'].map({'male': 0, 'female': 1}) \n",
+    "X['Embarked'] = X['Embarked'].map({'Q': 0, 'S': 1, 'C': 2})\n",
     "\n",
-    "# Umwandlung kategorischer Variablen\n",
-    "X['Sex'] = X['Sex'].map({'male': 0, 'female': 1})  # Geschlechtsvariable wird in numerische Werte umgewandelt (0 für männlich, 1 für weiblich)\n",
-    "X['Embarked'] = X['Embarked'].map({'Q': 0, 'S': 1, 'C': 2})  # Embarkationsvariable wird in numerische Werte umgewandelt (0 für Q, 1 für S, 2 für C)\n",
+    "X.dropna(inplace=True)\n",
+    "y = y[X.index]\n",
     "\n",
-    "# Entfernen von fehlenden Werten\n",
-    "X.dropna(inplace=True)  # Alle Zeilen mit fehlenden Werten in den Eingabedaten werden entfernt\n",
-    "y = y[X.index]  # Die Zielvariable wird entsprechend den verbleibenden Indizes der Eingabedaten angepasst\n",
-    "\n",
-    "# Aufteilen der Daten in Trainings- und Validierungsdatensätze\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)  \n",
-    "# Daten werden in Trainings- (80%) und Validierungssätze (20%) aufgeteilt, der random_state sorgt für Reproduzierbarkeit\n",
     "\n",
-    "# Umwandlung der Zielvariablen in kategorische Daten (für ein neuronales Netzwerk)\n",
-    "y_train = to_categorical(y_train, num_classes=2)  # Die Zielvariable wird in eine One-Hot-kodierte Form umgewandelt (zwei Klassen: Überlebt oder nicht)\n",
-    "y_val = to_categorical(y_val, num_classes=2)  # Dasselbe wird mit den Validierungsdaten gemacht\n",
+    "# Umwandlung der Zielvariablen in kategorische Daten\n",
+    "y_train = to_categorical(y_train, num_classes=2)\n",
+    "y_val = to_categorical(y_val, num_classes=2)\n",
     "\n",
     "# Erstellen des neuronalen Netzwerks\n",
     "model = Sequential()  # Initialisieren eines Sequential-Modells (eine lineare Stapelung von Schichten)\n",
@@ -865,18 +865,16 @@
     "model.add(Dense(16, activation='relu'))  # Zweite Dense-Schicht mit 16 Neuronen und ReLU-Aktivierung\n",
     "model.add(Dense(2, activation='softmax'))  # Ausgabeschicht mit 2 Neuronen und Softmax-Aktivierung für Klassifikation in zwei Klassen\n",
     "\n",
-    "# Kompilieren des Modells\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])  \n",
     "# Das Modell wird kompiliert, wobei der Verlust als kategorische Kreuzentropie verwendet wird, der Optimierer ist Adam, und die Genauigkeit wird als Metrik verwendet\n",
     "\n",
-    "# Training des Modells\n",
     "history = model.fit(X_train, y_train, epochs=50, batch_size=32, validation_data=(X_val, y_val), verbose=1)  \n",
     "# Das Modell wird mit den Trainingsdaten trainiert, über 50 Epochen und einer Batch-Größe von 32, und die Validierungsdaten werden nach jeder Epoche verwendet, um die Leistung zu überprüfen\n",
     "\n",
     "# Auswertung des Modells\n",
     "loss, accuracy = model.evaluate(X_val, y_val, verbose=0)  # Das Modell wird auf den Validierungsdaten ausgewertet, um Verlust und Genauigkeit zu berechnen\n",
     "\n",
-    "print(f\"Validierungsgenauigkeit: {accuracy*100:.2f}%\")  # Die Genauigkeit des Modells auf den Validierungsdaten wird in Prozent ausgegeben\n"
+    "print(f\"Validierungsgenauigkeit: {accuracy*100:.2f}%\")\n"
    ]
   }
  ],
