--- a/Titanic_R_D_F.ipynb
+++ b/Titanic_R_D_F.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Installation der benötigten Bibliotheken**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%pip install pandas\n",
+    "%pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Importieren der benötigten Biliotheken**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,6 +32,13 @@
     "from sklearn.model_selection import train_test_split \n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Random Forest**"
    ]
   },
   {
