--- a/Titanic_Neuron_Net.ipynb
+++ b/Titanic_Neuron_Net.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neuronales Netzwerk für den Titanic Datensatz"
+    "**Installation der benötigten Bibliotheken**"
    ]
   },
   {
@@ -702,6 +702,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Importieren der benötigten Biliotheken**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -712,6 +719,13 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Neuronales Netz**"
    ]
   },
   {
