--- a/Titanic_K_N_N.ipynb
+++ b/Titanic_K_N_N.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Modell erstellen und trainieren\n",
-    "knn = KNeighborsClassifier() \n",
+    "knn = KNeighborsClassifier(n_neighbors=5) \n",
     "knn.fit(X_train, y_train)\n",
     "\n",
     "# Vorhersagen treffen\n",
